language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_function_return_annotation_with_tuple.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nfn append(x: String, y: String) -> #(String, String) {\n  #(x, y)\n}\n"
---

/// Exciting documentation
/// Maybe even multiple lines
fn append(x: String, y: String) -> #(String, String) {
                                     ▔▔↑▔▔▔           
  #(x, y)
}


----- Hover content (markdown) -----
```gleam
String
```
