language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_import_unqualified_type.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module.{type MyType, MyType}\nfn main() -> MyType {\n  MyType\n}\n"
---

import example_module.{type MyType, MyType}
                       ▔▔▔▔▔▔▔▔▔▔↑         
fn main() -> MyType {
  MyType
}


----- Hover content (markdown) -----
```gleam
MyType
```
 Exciting documentation
 Maybe even multiple lines
