language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_module_constant_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nconst one: Int = 1\n"
---

/// Exciting documentation
/// Maybe even multiple lines
const one: Int = 1
           ▔▔↑    


----- Hover content (markdown) -----
```gleam
Int
```
