language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_qualified_prelude_type_when_shadowed_by_imported_alias.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport alias.{type Bool}\nconst value = True\n"
---

import alias.{type Bool}
const value = True
▔▔▔▔▔▔↑▔▔▔▔       


----- Hover content (markdown) -----
```gleam
Bool
```
